@@ -1,3 +1,14 @@
+*** 19990826_1 by lusky
+turned on ANTI_DRONE_FLOOD by default
+sync'd config.h.dist
+include class.h in m_message.c
+bumped patchlevel to b101
+
+
+*** 19990825_2 by lusky
+changed a strncpy to DupString in s_conf.c (db)
+
+
 *** 19990825_1 by lusky
 bumped patchlevel.h to b100
 more kill path fixes (db)
